# cuda-samples

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  MODULE.bazel  Makefile  README.md  Samples_VS2017.sln  Samples_VS2019.sln  Samples_VS2022.sln  launch_x64_vs2019.bat  launch_x64_vs2019_vulkan.bat  run_memcheck.sh  run_tests.py  test_args.json
Common/: BUILD.bazel  drvapi_error_string.h  dynlink_d3d10.h  dynlink_d3d11.h  exception.h  helper_cuda.h  helper_cuda_drvapi.h  helper_cusolver.h  helper_functions.h  helper_gl.h  helper_image.h  helper_math.h  helper_multiprocess.cpp  helper_multiprocess.h  helper_nvJPEG.hxx  helper_string.h  helper_timer.h  multithreading.cpp  multithreading.h  nvMath.h  nvMatrix.h  nvQuaternion.h  nvShaderUtils.h  nvVector.h  nvrtc_helper.h  param.h  paramgl.h  rendercheck_d3d10.cpp  rendercheck_d3d10.h  rendercheck_d3d11.cpp  rendercheck_d3d11.h  rendercheck_d3d9.cpp  rendercheck_d3d9.h  rendercheck_gl.h  rendercheck_gles.h
Common/GL/: freeglut_ext.h  freeglut_std.h  glew.h  glext.h  glut.h  glxew.h  glxext.h  wglew.h  wglext.h
Common/UtilNPP/: Exceptions.h  Image.h  ImageAllocatorsCPU.h  ImageAllocatorsNPP.h  ImageIO.h  ImagePacked.h  ImagesCPU.h  ImagesNPP.h  Pixel.h  Signal.h  SignalAllocatorsCPU.h  SignalAllocatorsNPP.h  SignalsCPU.h  SignalsNPP.h
Common/data/: CT_skull_512x512_8u.raw  CT_skull_512x512_8u_Gray.raw  Lena_512x512_8u_Gray.raw  PCB2_1024x683_8u.raw  PCB_1280x720_8u.raw  PCB_METAL_509x335_8u.raw  Rocks_512x512_8u_Gray.raw  lena_512x512_8u.raw  teapot_512x512_8u.raw  teapot_512x512_8u_Gray.raw
Samples/: CMakeLists.txt
Samples/0_Introduction/: CMakeLists.txt  README.md
Samples/1_Utilities/: BUILD.bazel  CMakeLists.txt  README.md
Samples/2_Concepts_and_Techniques/: CMakeLists.txt  README.md
Samples/3_CUDA_Features/: CMakeLists.txt  README.md
Samples/4_CUDA_Libraries/: CMakeLists.txt  README.md
Samples/5_Domain_Specific/: CMakeLists.txt  README.md
Samples/6_Performance/: CMakeLists.txt  README.md
Samples/7_libNVVM/: CMakeLists.txt  Makefile  README.md
Samples/BlackScholes/: BlackScholes.cu  BlackScholes_gold.cpp  BlackScholes_kernel.cuh  BlackScholes_vs2017.vcxproj  BlackScholes_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/BlackScholes_nvrtc/: BlackScholes.cpp  BlackScholes_gold.cpp  BlackScholes_kernel.cuh  BlackScholes_nvrtc_vs2017.sln  BlackScholes_nvrtc_vs2017.vcxproj  BlackScholes_nvrtc_vs2019.vcxproj  Makefile  README.md
Samples/EGLStream_CUDA_CrossGPU/: Makefile  NsightEclipse.xml  README.md  cuda_consumer.cpp  cuda_consumer.h  cuda_producer.cpp  cuda_producer.h  eglstrm_common.cpp  eglstrm_common.h  helper.h  kernel.cu  main.cpp
Samples/EGLStream_CUDA_Interop/: Makefile  NsightEclipse.xml  README.md  cuda_consumer.cpp  cuda_consumer.h  cuda_producer.cpp  cuda_producer.h  eglstrm_common.cpp  eglstrm_common.h  findegl.mk  main.cpp
Samples/EGLStreams_CUDA_Interop/: Makefile  NsightEclipse.xml  README.md  cuda_consumer.cpp  cuda_consumer.h  cuda_producer.cpp  cuda_producer.h  eglstrm_common.cpp  eglstrm_common.h  main.cpp
Samples/EGLSync_CUDAEvent_Interop/: EGLSync_CUDAEvent_Interop.cu  Makefile  NsightEclipse.xml  README.md  egl_common.h  graphics_interface.h
Samples/FDTD3d/: FDTD3d_vs2017.vcxproj  FDTD3d_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/FilterBorderControlNPP/: FilterBorderControlNPP.cpp  FilterBorderControlNPP_vs2017.vcxproj  FilterBorderControlNPP_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/FunctionPointers/: FunctionPointers.cpp  FunctionPointers_kernels.cu  FunctionPointers_kernels.h  FunctionPointers_vs2017.vcxproj  FunctionPointers_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/HSOpticalFlow/: HSOpticalFlow_vs2017.vcxproj  HSOpticalFlow_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md  addKernel.cuh  common.h  derivativesKernel.cuh  downscaleKernel.cuh  flowCUDA.cu  flowCUDA.h  flowGold.cpp  flowGold.h  main.cpp  solverKernel.cuh  upscaleKernel.cuh  warpingKernel.cuh
Samples/MC_EstimatePiInlineP/: MC_EstimatePiInlineP_vs2017.vcxproj  MC_EstimatePiInlineP_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/MC_EstimatePiInlineQ/: MC_EstimatePiInlineQ_vs2017.vcxproj  MC_EstimatePiInlineQ_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/MC_EstimatePiP/: MC_EstimatePiP_vs2017.vcxproj  MC_EstimatePiP_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/MC_EstimatePiQ/: MC_EstimatePiQ_vs2017.vcxproj  MC_EstimatePiQ_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/MC_SingleAsianOptionP/: MC_SingleAsianOptionP_vs2017.vcxproj  MC_SingleAsianOptionP_vs2019.vcxproj  Makefile  NsightEclipse.xml  README.md
Samples/Mandelbrot/: Makefile  Mandelbrot.cpp  Mandelbrot_cuda.cu  Mandelbrot_gold.cpp  Mandelbrot_gold.h  Mandelbrot_kernel.cuh  Mandelbrot_kernel.h  Mandelbrot_vs2017.vcxproj  Mandelbrot_vs2019.vcxproj  NsightEclipse.xml  README.md
Samples/MersenneTwisterGP11213/: Makefile  MersenneTwister.cpp  MersenneTwisterGP11213_vs2012.sln  MersenneTwisterGP11213_vs2012.vcxproj  MersenneTwisterGP11213_vs2013.sln  MersenneTwisterGP11213_vs2013.vcxproj  MersenneTwisterGP11213_vs2015.sln  MersenneTwisterGP11213_vs2015.vcxproj  MersenneTwisterGP11213_vs2017.vcxproj  MersenneTwisterGP11213_vs2019.vcxproj  NsightEclipse.xml  README.md
Samples/MonteCarloMultiGPU/: Makefile  MonteCarloMultiGPU.cpp  MonteCarloMultiGPU_vs2017.vcxproj  MonteCarloMultiGPU_vs2019.vcxproj  MonteCarlo_common.h  MonteCarlo_gold.cpp  MonteCarlo_kernel.cu  MonteCarlo_reduction.cuh  NsightEclipse.xml  README.md  multithreading.cpp  multithreading.h  realtype.h
Samples/NV12toBGRandResize/: Makefile  NV12toBGRandResize_vs2012.sln  NV12toBGRandResize_vs2012.vcxproj  NV12toBGRandResize_vs2013.sln  NV12toBGRandResize_vs2013.vcxproj  NV12toBGRandResize_vs2015.sln  NV12toBGRandResize_vs2015.vcxproj  NV12toBGRandResize_vs2017.vcxproj  NV12toBGRandResize_vs2019.vcxproj  NsightEclipse.xml  README.md  (+7 more)
(+4618 files in other folders)
