add_subdirectory(StreamPriorities)
add_subdirectory(bf16TensorCoreGemm)
add_subdirectory(binaryPartitionCG)
add_subdirectory(bindlessTexture)
add_subdirectory(cdpAdvancedQuicksort)
add_subdirectory(cdpBezierTessellation)
add_subdirectory(cdpQuadtree)
add_subdirectory(cdpSimplePrint)
add_subdirectory(cdpSimpleQuicksort)
add_subdirectory(cudaCompressibleMemory)
add_subdirectory(cudaTensorCoreGemm)
add_subdirectory(dmmaTensorCoreGemm)
add_subdirectory(globalToShmemAsyncCopy)
add_subdirectory(graphConditionalNodes)
add_subdirectory(graphMemoryFootprint)
add_subdirectory(graphMemoryNodes)
add_subdirectory(immaTensorCoreGemm)
add_subdirectory(jacobiCudaGraphs)
add_subdirectory(memMapIPCDrv)
add_subdirectory(newdelete)
add_subdirectory(ptxjit)
add_subdirectory(simpleCudaGraphs)
add_subdirectory(tf32TensorCoreGemm)
add_subdirectory(warpAggregatedAtomicsCG)
