add_subdirectory(BlackScholes)
add_subdirectory(BlackScholes_nvrtc)
#add_subdirectory(HSOpticalFlow)
#add_subdirectory(Mandelbrot)
#add_subdirectory(MonteCarloMultiGPU)
#add_subdirectory(NV12toBGRandResize)
#add_subdirectory(SobelFilter)
#add_subdirectory(SobolQRNG)
add_subdirectory(bicubicTexture)
add_subdirectory(bilateralFilter)
add_subdirectory(binomialOptions)
add_subdirectory(binomialOptions_nvrtc)
add_subdirectory(convolutionFFT2D)
add_subdirectory(dwtHaar1D)
add_subdirectory(dxtc)
#add_subdirectory(fastWalshTransform)
#add_subdirectory(fluidsGL)
#add_subdirectory(fluidsGLES)
#add_subdirectory(marchingCubes)
#add_subdirectory(nbody)
#add_subdirectory(nbody_opengles)
#add_subdirectory(nbody_screen)
#add_subdirectory(p2pBandwidthLatencyTest)
#add_subdirectory(postProcessGL)
#add_subdirectory(quasirandomGenerator)
#add_subdirectory(quasirandomGenerator_nvrtc)
#add_subdirectory(recursiveGaussian)
#add_subdirectory(simpleD3D11)
#add_subdirectory(simpleD3D11Texture)
#add_subdirectory(simpleD3D12)
#add_subdirectory(simpleGL)
#add_subdirectory(simpleGLES)
#add_subdirectory(simpleGLES_EGLOutput)
#add_subdirectory(simpleGLES_screen)
#add_subdirectory(simpleVulkan)
#add_subdirectory(simpleVulkanMMAP)
#add_subdirectory(smokeParticles)
#add_subdirectory(stereoDisparity)
#add_subdirectory(volumeFiltering)
#add_subdirectory(volumeRender)
#add_subdirectory(vulkanImageCUDA)
